# diplom

MonitoringModule/: JenkinsClient.py  PipelineModels.py
TestGenerationModule/: .dockerignore  Makefile  docker-compose.yml  pyproject.toml  requirements.txt
TestGenerationModule/code_rag/: __init__.py
TestGenerationModule/code_rag/api/: __init__.py  app.py  config.py  dependencies.py
TestGenerationModule/code_rag/api/routes/: embeddings.py  generation.py  health.py  indexing.py  search.py
TestGenerationModule/code_rag/config/: __init__.py  config.yaml  settings.py
TestGenerationModule/code_rag/core/: __init__.py
TestGenerationModule/code_rag/core/embeddings/: qwen_embed.py
TestGenerationModule/code_rag/core/parser/: base_parser.py  factory.py
TestGenerationModule/code_rag/core/parser/parsers/: __init__.py  css_parser.py  javascript_parser.py  python_parser.py  typescript_parser.py
TestGenerationModule/code_rag/core/parser/utils/: __init__.py  complexity_calculator.py  docstring_extractor.py
TestGenerationModule/code_rag/core/rag/: __init__.py  qwen_integration.py  rag_retriever.py
TestGenerationModule/code_rag/core/vector_db/: schemas.py  vectorization_pipeline.py
TestGenerationModule/code_rag/utils/: config.py  helpers.py  logger.py
TestGenerationModule/docs/: architecture.md  rag_strategies.md
TestGenerationModule/examples/: advanced_rag.py  auto_reindexing.py  complete_workflow.py  multi_repository.py
TestGenerationModule/tests/: test_embeddings.py  test_git_handler.py  test_health_api.py  test_parser.py  test_rag.py  test_repositories_api.py  test_search_api.py
backend/: Dockerfile  README.md  requirements-dev.txt
backend/code_rag/: .env.example  __init__.py
backend/code_rag/api/: app.py
backend/code_rag/api/monitoring_module/: database.py
backend/code_rag/api/routes/: repositories.py
backend/code_rag/core/embeddings/: __init__.py  base.py  code_embedder.py  factory.py  nomic_embed.py  remote_embed.py
backend/code_rag/core/git_handler/: __init__.py  monitor.py  repository.py
backend/code_rag/core/parser/: __init__.py  code_structure.py
backend/code_rag/core/vector_db/: __init__.py  schemas.py  (+1 more)
backend/code_rag/monitoring_module/: models.py  pipeline_models.py  router.py
backend/code_rag/qdrant_storage/: raft_state.json
backend/code_rag/utils/: __init__.py
backend/docs/: api_reference.md  deployment.md  embeddings.md
backend/examples/: __init__.py  advanced_rag.py  auto_reindexing.py  basic_usage.py  complete_workflow.py  multi_repository.py
backend/tests/: __init__.py  conftest.py  test_embeddings.py  test_embeddings_api.py  test_generation_api.py  test_git_handler.py  test_health_api.py  test_indexing_api.py  test_parser.py  test_qdrant.py  test_rag.py  test_repositories_api.py  test_search_api.py  test_vectorization.py
frontend/: index.html
(+5 files in other folders)
